-----------------

- Wrapper in Julia for PaPILO: https://github.com/scipopt/PaPILO.jl

### Deleted and changed API methods
### New API functions
### Changed parameters

### New parameters with default values

- probing.maxbadgesize = -1 : maximal number of probing candidates probed in a single badge of candidates (-1 deactivated)
- ortools.solver_id = PDLP : LP solver of or-tools

### Data structures

Unit tests
----------

Testing
-------

Build system
------------

Fixed bugs
----------

Miscellaneous
-------------
- Providing a way to build PaPILO without TBB (warning parallel design can not be used anymore)
- Providing an interface to gurobi
- Providing an interface to ortools (GLOP/PDLP)
- Install all files (also externals) to the include/papilo folder
- Presolving is aborted if presolvers are activated that do not support dual postsolve

Known bugs
----------

@page RN20 Release notes for PAPILO 2.0

@section RN201 PaPILO 2.0.1
***************************

Features
--------
Performance improvements
------------------------
Interface changes
-----------------
### Deleted and changed API methods
### New API functions
### Changed parameters
### New parameters with default values
### Data structures
Unit tests
----------
Testing
-------
Build system
------------
Fixed bugs
----------

- ParallelRowDetection: lhs is updated correctly
- fix fmt error: use correct amount of arguments for print statement
- copy extended_euclidean.hpp during installation
- fix bug in FindTBB module
- ranged rows in MPS Files can now be parsed if they are specified as 'E'
- postsolving FixInfinityCol works also in primal case
- store data for FixInfinityCol correct if bounds are both infinity
- PaPILO shows some behavior on different OS

Miscellaneous
-------------
Known bugs
----------

@section RN200 PaPILO 2.0.0
***************************

Features
--------
